--- a/back-end/.env.docker
+++ b/back-end/.env.docker
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:bignelson@drivenops_db:5432/students
+DATABASE_URL=postgresql://postgres:postgres@drivenops_db:5432/students
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=bignelson
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=students
