--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -3,6 +3,9 @@ on: [pull_request]
 jobs:
   PullRequest:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Mobile
     steps:
       - name: Check out
         uses: actions/checkout@v3
