--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: Mobile
+        working-directory: back-end
     steps:
       - name: Check out
         uses: actions/checkout@v3
