--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,4 +18,4 @@ jobs:
           envkey_DATABASE_URL: "postgresql://postgres:postgres@drivenops_db_test:5432/students_test"
           file_name: ".env.test"
       - name: Run Tests
-        run: docker-compose -f ./back-end/docker-compose-test.yml run node_app_test npm run test
+        run: docker-compose -f docker-compose-test.yml run node_app_test npm run test
