--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,7 +13,7 @@ jobs:
           envkey_POSTGRES_USER: "postgres"
           envkey_POSTGRES_DB: "students_test"
           envkey_DATABASE_URL: "postgresql://postgres:postgres@drivenops_db_test:5432/students_test"
-          directory: /back-end
+          directory: ./back-end
           file_name: ".env.test"
       - name: Run Tests
         run: docker-compose -f ./back-end/docker-compose-test.yml run node_app_test npm run test
