--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,6 @@ server {
     }
 
     location /api {
-        proxy_pass http://node_app:5000;
+        proxy_pass http://node_app:5000/;
     }
 }
