--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,7 @@ jobs:
       - name: Create front-end env file
         uses: SpicyPizza/create-envfile@v1.3
         with:
-          envkey_POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
-          envkey_POSTGRES_USER: ${{secrets.POSTGRES_USER}}
-          envkey_POSTGRES_DB: ${{secrets.POSTGRES_DB}}
-          envkey_DATABASE_URL: ${{secrets.DATABASE_URL}}
+          envkey_REACT_APP_BASE_URL: ${{secrets.REACT_APP_BASE_URL}}
           directory: front-end/
           file_name: .env.docker
           fail_on_empty: true
