--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           envkey_POSTGRES_USER: ${{secrets.POSTGRES_USER}}
           envkey_POSTGRES_DB: ${{secrets.POSTGRES_DB}}
           envkey_DATABASE_URL: ${{secrets.DATABASE_URL}}
-          directory: back-end/
+          directory: ./back-end
           file_name: .env.docker
           fail_on_empty: true
 
@@ -25,7 +25,7 @@ jobs:
         uses: SpicyPizza/create-envfile@v1.3
         with:
           envkey_REACT_APP_BASE_URL: ${{secrets.REACT_APP_BASE_URL}}
-          directory: front-end/
+          directory: ./front-end
           file_name: .env.docker
           fail_on_empty: true
 
