--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - pg:/var/lib/postgresql/d
     env_file:
-      - ./back-end/.env.docker
+      - ./back-end/.env
 
   node_app:
     container_name: node_app
@@ -18,7 +18,7 @@ services:
     depends_on:
       - drivenops_db 
     env_file:
-      - ./back-end/.env.docker
+      - ./back-end/.env
   
   react_app:
     container_name: react_app
