--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           envkey_POSTGRES_DB: ${{secrets.POSTGRES_DB}}
           envkey_DATABASE_URL: ${{secrets.DATABASE_URL}}
           directory: ./back-end
-          file_name: .env.docker
+          file_name: .env
           fail_on_empty: true
 
       - name: Create front-end env file
@@ -26,7 +26,7 @@ jobs:
         with:
           envkey_REACT_APP_BASE_URL: ${{secrets.REACT_APP_BASE_URL}}
           directory: ./front-end
-          file_name: .env.docker
+          file_name: .env
           fail_on_empty: true
 
       - name: Build
