--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        run: git pull origin main
       - name: Create back-end env file
         uses: SpicyPizza/create-envfile@v1.3
         with:
@@ -34,4 +33,4 @@ jobs:
         run: docker-compose build
 
       - name: Run
-        run: docker-compose down && docker-compose up -d
+        run: docker-compose down -v && docker-compose up -d
